# axum-debug

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml  dockerfile
src/: fallible.rs  main.rs
